--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "tcg/voyager",
-    "description": "A Laravel Admin Package for The Control Group to make your life easier and steer your project in the right direction",
+    "name": "zhenyauk/voyager",
+    "description": "A Laravel Admin Package for The Control Group without see theme",
     "keywords": ["laravel", "admin", "panel"],
     "license": "MIT",
     "homepage": "https://the-control-group.github.io/voyager/",
     "support": {
         "issues": "https://github.com/the-control-group/voyager/issues",
-        "source": "https://github.com/the-control-group/voyager"
+        "source": "https://github.com/zhenyauk/voyager"
     },
     "authors": [
         {
             "name": "Tony Lea",
-            "email": "tony.lea@thecontrolgroup.com"
+            "email": "zhenyauk@gmail.com"
         }
     ],
     "require": {
